[package]
name = "pjs-rs"
version = "0.1.3"
edition = "2021"
authors = ["Javier Viola <crates@javierviola.com>"]
repository = "https://github.com/pepoviola/pjs-rs"
keywords = [ "polkadotjs", "runtime", "cli" ]
license = "Apache-2.0/MIT"
description = "A javascript runtime with [pjs](https://github.com/polkadot-js) embebed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
deno_ast = { version = "0.38", features = ["transpiling"] }
deno_core = "0.272.0"
tokio = { version = "1.37.0", features = ["full"] }
deno_console = "0.143.0"
deno_webidl = "0.144.0"
deno_fetch = "0.167.0"
deno_crypto = "0.157.0"
deno_url = "0.143.0"
deno_web = "0.174.0"
deno_websocket = "0.149.0"
log = "0.4.21"
