[package]
name = "pjs-rs"
version = "0.1.3"
edition = "2021"
authors = ["Javier Viola <crates@javierviola.com>"]
repository = "https://github.com/pepoviola/pjs-rs"
keywords = [ "polkadotjs", "runtime", "cli" ]
license = "Apache-2.0/MIT"
description = "A javascript runtime with [pjs](https://github.com/polkadot-js) embebed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
deno_ast = { version = "0.43.3", features = ["transpiling"] }
deno_core = "0.321.0"
deno_permissions = "0.39.0"
deno_console = "0.179.0"
deno_webidl = "0.179.0"
deno_fetch = "0.203.0"
deno_crypto = "0.193.0"
deno_url = "0.179.0"
deno_web = "0.210.0"
deno_websocket = "0.184.0"
deno_net = "0.171.0"
log = "0.4.22"
tokio = { version = "1.37.0", features = ["full"] }
