[package]
name = "pjs-rs"
version = "0.1.4"
edition = "2021"
authors = ["Javier Viola <crates@javierviola.com>"]
repository = "https://github.com/pepoviola/pjs-rs"
keywords = [ "polkadotjs", "runtime", "cli" ]
license = "Apache-2.0/MIT"
description = "A javascript runtime with [pjs](https://github.com/polkadot-js) embebed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
deno_ast = { version = "0.44.0", features = ["transpiling"] }
deno_core = "0.336.0"
deno_io = "0.100.0"
deno_runtime = { version = "0.198.0", features = ["transpile"] }
deno_permissions = "0.49.0"
deno_console = "0.190.0"
deno_webidl = "0.190.0"
deno_fetch = "0.214.0"
deno_crypto = "0.204.0"
deno_url = "0.190.0"
deno_web = "0.221.0"
deno_websocket = "0.195.0"
deno_net = "0.182.0"
deno_telemetry = "0.12.0"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
